--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -460,6 +460,24 @@
                 {id:'paypal-button', type:'currentuser'}
             ]
 
+            $('#btn-launch-30').click(function(e){
+                if (e)
+                    e.preventDefault()
+                
+                console.log('BTN LAUNCH 30: ')
+                $('#register-price-header').html('$30 per 6 months')
+                purchaseSite(30)
+            })
+
+            $('#btn-launch-50').click(function(e){
+                if (e)
+                    e.preventDefault()
+                
+                console.log('BTN LAUNCH 50: ')
+                $('#register-price-header').html('$50 per 12 months')
+                purchaseSite(50)
+            })
+
             // checks if a template is ready when cloning:
             var checkTemplate = function(siteSlug){
                 var body = {template:siteSlug}
@@ -606,91 +624,6 @@
                     }).render('#'+button.id)
                 }
             })
-        })()
-    </script>
-
-    <script>
-        (function(){
-            var data = window.__PRELOADED__
-            var currentUser = data.user // null if not logged in
-
-            $('#input-register').click(function(event){
-                if (event)
-                    event.preventDefault()
-
-                var visitor = {
-                    fullName: $('#input-register-name').val(),
-                    email: $('#input-register-email').val(),
-                    password: $('#input-register-password').val()
-                    // promoCode: $('#input-register-promo').val()
-                }
-
-                if (visitor.fullName.length == 0){
-                    alert('Please enter your NAME')
-                    return
-                }
-
-                if (visitor.email.length == 0){
-                    alert('Please enter your EMAIL')
-                    return
-                }
-
-                if (visitor.password.length == 0){
-                    alert('Please enter your PASSWORD')
-                    return
-                }
-
-                $.ajax({
-                    url: '/account/register',
-                    type: 'POST',
-                    data: visitor,
-                    success: function(resp){
-                        console.log('AJAX SUCCESS - ' + JSON.stringify(resp))
-                        if (resp.confirmation != 'success'){
-                            alert(resp.message)
-                            return
-                        }
-
-                        currentUser = resp.user
-                        document.getElementById('btn-register-modal').click()
-                        setTimeout(function(){
-                            document.getElementById('btn-purchase-modal').click()
-                        }, 400)
-                    },
-                    error: function(resp){
-                        console.log('AJAX ERROR - ' + JSON.stringify(resp))
-                        alert('ERR - ' + resp.message)
-                    }
-                })            
-            })
-
-            var purchaseSite = function(price){
-                if (currentUser != null){
-                    console.log('current user: '+JSON.stringify(currentUser))
-                    document.getElementById('btn-purchase-modal').click()
-                    return
-                }
-
-                // console.log('current user: '+JSON.stringify(currentUser))
-                document.getElementById('btn-register-modal').click()
-            }
-
-            $('#btn-launch-30').click(function(e){
-                if (e)
-                    e.preventDefault()
-                
-                console.log('BTN LAUNCH 30: ')
-                purchaseSite(30)
-            })
-
-            $('#btn-launch-50').click(function(e){
-                if (e)
-                    e.preventDefault()
-                
-                console.log('BTN LAUNCH 50: ')
-                purchaseSite(50)
-            })
-
         })()
     </script>
 
