--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -475,7 +475,7 @@
                 if (e)
                     e.preventDefault()
                 
-                console.log('BTN LAUNCH 30: ')
+                // console.log('BTN LAUNCH 30: ')
                 $('#upgrade-price-modal').html('$30 per 6 months')
                 $('#register-price-header').html('$30 per 6 months')
                 purchaseSite(30)
@@ -485,7 +485,7 @@
                 if (e)
                     e.preventDefault()
                 
-                console.log('BTN LAUNCH 50: ')
+                // console.log('BTN LAUNCH 50: ')
                 $('#upgrade-price-modal').html('$50 per 12 months')
                 $('#register-price-header').html('$50 per 12 months')
                 purchaseSite(50)
