set amount based on selected plan

--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -455,10 +455,12 @@
             var preloaded = window.__PRELOADED__
             var currentUser = preloaded.user // null if not registered
             var template = preloaded.template
+            var amount = {num:3000, str:'30.00'}
             var buttons = [
                 {id:'paypal-button-register', type:'register'},
                 {id:'paypal-button', type:'currentuser'}
             ]
+
 
             var purchaseSite = function(price){
                 if (currentUser != null){
@@ -478,6 +480,7 @@
                 // console.log('BTN LAUNCH 30: ')
                 $('#upgrade-price-modal').html('$30 per 6 months')
                 $('#register-price-header').html('$30 per 6 months')
+                amount = {num:3000, str:'30.00'}
                 purchaseSite(30)
             })
 
@@ -488,6 +491,7 @@
                 // console.log('BTN LAUNCH 50: ')
                 $('#upgrade-price-modal').html('$50 per 12 months')
                 $('#register-price-header').html('$50 per 12 months')
+                amount = {num:5000, str:'50.00'}
                 purchaseSite(50)
             })
 
