--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -99,7 +99,6 @@
             </div>
         </section>
 
-
         <section>
             <div class="container">
                 <div class="row justify-content-center text-center section-intro">
@@ -110,32 +109,37 @@
                         </p>
                         <img alt="Vertex 360" class="img-fluid w-50" src="https://lh3.googleusercontent.com/At6y2BkhC30Bo8giKp1sqmxJDlwrXZtLFIttDoCyotJe7WEEAlymf8cffPrOuIgxzdph_ucU2O2EnzyBUfo5UKgg=s1024">
                         <p class="lead mb-4 mt-4">
-                          This is where Vertex 360 comes in. All sites on deployed on Vertex 360 are equipped with support for the following:
+                            All Vertex 360 sites come equipped with the following:
                         </p>
 
                         <ul class="list-unstyled list-spacing-sm m-auto features-list w-50">
                             <li class="row">
-                                <div class="col-2 col-md-1"><i class="icon-check h5"></i>
+                                <div class="col-2 col-md-1">
+                                    <i class="icon-check h5"></i>
                                 </div>
                                 <div class="col-10 lead mb-0">Custom Domain</div>
                             </li>
                             <li class="row">
-                                <div class="col-2 col-md-1"><i class="icon-check h5"></i>
+                                <div class="col-2 col-md-1">
+                                    <i class="icon-check h5"></i>
                                 </div>
                                 <div class="col-10 lead mb-0">Automatic SSL Integration</div>
                             </li>
                             <li class="row">
-                                <div class="col-2 col-md-1"><i class="icon-check h5"></i>
+                                <div class="col-2 col-md-1">
+                                    <i class="icon-check h5"></i>
                                 </div>
                                 <div class="col-10 lead mb-0">No 3rd Party Branding</div>
                             </li>
                             <li class="row">
-                                <div class="col-2 col-md-1"><i class="icon-check h5"></i>
+                                <div class="col-2 col-md-1">
+                                    <i class="icon-check h5"></i>
                                 </div>
                                 <div class="col-10 lead mb-0">Blog Integration</div>
                             </li>
                             <li class="row">
-                                <div class="col-2 col-md-1"><i class="icon-check h5"></i>
+                                <div class="col-2 col-md-1">
+                                    <i class="icon-check h5"></i>
                                 </div>
                                 <div class="col-10 lead mb-0">E-Commerce Support (via PayPal)</div>
                             </li>
@@ -151,19 +155,10 @@
                             Expired SSL certificates and security issues immediately destroy your credibility as a trusted website and professional. Our sites are <em>automatically</em> updated
                             for SSL encryption and will <strong>never</strong> show this warning which drives away valuable business.
                         </p>
-
                     </div>
-                    <!--end of col-->
                 </div>
-                <!--end of row-->
-
-
-
             </div>
-            <!--end of container-->
         </section>
-
-        
         
         <section class="bg-gray text-white space-md">
             <div class="container">
