--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -70,7 +70,7 @@
                 <!--end of row-->
                 <ul class="row feature-list feature-list-sm">
                     <li class="col-12 col-md-4">
-                        <a href="#" class="card">
+                        <a href="#" class="card mt-4">
                             <img alt="Vertex 360" src="{{{promo.features.preview_1.img_screenshot}}}=s1024-c" class="img-fluid rounded" />
                         </a>
                         <h5>{{promo.features.preview_1.header}}</h5>
@@ -79,7 +79,7 @@
                     </li>
 
                     <li class="col-12 col-md-4">
-                        <a href="#" class="card">
+                        <a href="#" class="card mt-4">
                             <img alt="Vertex 360" src="{{{promo.features.preview_2.img_screenshot}}}=s1024-c" class="img-fluid rounded" />
                         </a>
                         <h5>{{promo.features.preview_2.header}}</h5>
@@ -88,7 +88,7 @@
                     </li>
 
                     <li class="col-12 col-md-4">
-                        <a href="#" class="card">
+                        <a href="#" class="card mt-4">
                             <img alt="Vertex 360" src="{{{promo.features.preview_3.img_screenshot}}}=s1024-c" class="img-fluid rounded" />
                         </a>
                         <h5>{{promo.features.preview_3.header}}</h5>
