--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -265,102 +265,69 @@
         <footer class="bg-gray text-light footer-long">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-md-3">
-                        <img alt="Image" src="/wingman/img/logo-white.svg" class="mb-4" />
-                        <p class="text-muted">
-                            &copy; 2018 Medium Rare
-                            <br />Template available exclusively
-                            <br />at Bootstrap Themes
+                    <div class="col-12 col-md-4 mb-4">
+                        <img style="width:100px" alt="Turbo 360" src="https://lh3.googleusercontent.com/90S7s_3EMyHbmIs25cPSO5mVj9GnmLfzUPWzGhhQ61uceXESbkSsvXoPsM7kEaTlFpKCOlYkCz4Cppke_82gduCFpB8=s200" class="mb-2">
+                        <p class="text-muted mt-1">
+                            Learn Node, React, Redux with Real
+                            <br />World Project Tutorials.
+                            <br>&copy; 2019 Turbo 360 Inc.
                         </p>
                     </div>
-                    <!--end of col-->
-                    <div class="col-12 col-md-9">
-                        <span class="h5">A robust suite of styled components for Bootstrap 4</span>
+                    <div class="col-12 col-md-8">
                         <div class="row no-gutters">
                             <div class="col-6 col-lg-3">
-                                <h6>Navigate</h6>
+                                <h6>Menu</h6>
                                 <ul class="list-unstyled">
-                                    <li>
-                                        <a href="index.html">Overview</a>
+                                    <li class="mb-1">
+                                        <a href="/">Home</a>
                                     </li>
-                                    <li>
-                                        <a href="pages-landing.html">Landing Pages</a>
+                                    <li class="mb-1">
+                                        <a href="/about">About</a>
                                     </li>
-                                    <li>
-                                        <a href="pages-app.html">App Pages</a>
-                                    </li>
-                                    <li>
-                                        <a href="pages-inner.html">Inner Pages</a>
+                                    <li class="mb-1">
+                                        <a href="/templates">Templates</a>
                                     </li>
                                 </ul>
                             </div>
-                            <!--end of col-->
                             <div class="col-6 col-lg-3">
-                                <h6>Platform</h6>
+                                <h6>Develop</h6>
                                 <ul class="list-unstyled">
-                                    <li>
-                                        <a href="#">Mac OS &amp; iOS</a>
+                                    <li class="mb-1">
+                                        <a href="https://docs.turbo360.co">Documentation</a>
                                     </li>
-                                    <li>
-                                        <a href="#">Android &amp; Chrome OS</a>
+                                    <li class="mb-1">
+                                        <a target="_blank" href="https://www.vertex360.co">Vertex 360</a>
                                     </li>
-                                    <li>
-                                        <a href="#">Windows</a>
+                                    <li class="mb-1">
+                                        <a href="#">Privacy Policy</a>
                                     </li>
-                                    <li>
-                                        <a href="#">Linux</a>
+                                    <li class="mb-1">
+                                        <a href="#">Terms</a>
                                     </li>
                                 </ul>
                             </div>
-                            <!--end of col-->
                             <div class="col-6 col-lg-3">
-                                <h6>Community</h6>
+                                <h6>Social</h6>
                                 <ul class="list-unstyled">
-                                    <li>
-                                        <a href="#">Forum</a>
+                                    <li class="mb-1">
+                                        <a target="_blank" href="https://www.youtube.com/c/turbo360">Youtube</a>
                                     </li>
-                                    <li>
-                                        <a href="#">Knowledgebase</a>
+                                    <li class="mb-1">
+                                        <a target="_blank" href="https://www.instagram.com/turbo_3_6_0/">Instagram</a>
                                     </li>
-                                    <li>
-                                        <a href="#">Hire an expert</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">FAQ</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Contact</a>
+                                    <li class="mb-1">
+                                        <a target="_blank" href="https://www.facebook.com/groups/129426381011360/">Facebook</a>
                                     </li>
                                 </ul>
+
                             </div>
-                            <!--end of col-->
-                            <div class="col-6 col-lg-3">
-                                <h6>Company</h6>
-                                <ul class="list-unstyled">
-                                    <li>
-                                        <a href="#">About company</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">History</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Team</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Investment</a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <!--end of col-->
                         </div>
-                        <!--end of row-->
                     </div>
-                    <!--end of col-->
                 </div>
-                <!--end of row-->
             </div>
-            <!--end of container-->
         </footer>
+
+
     </div>
 
 <div class="modal fade" id="register-modal" tabindex="-1" role="dialog" aria-labelledby="registerModalLabel" aria-hidden="true">
