--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -282,10 +282,10 @@
                                         <a href="/">Home</a>
                                     </li>
                                     <li class="mb-1">
-                                        <a href="/about">About</a>
+                                        <a href="/templates">Templates</a>
                                     </li>
                                     <li class="mb-1">
-                                        <a href="/templates">Templates</a>
+                                        <a href="/community">Community</a>
                                     </li>
                                 </ul>
                             </div>
@@ -294,9 +294,6 @@
                                 <ul class="list-unstyled">
                                     <li class="mb-1">
                                         <a href="https://docs.turbo360.co">Documentation</a>
-                                    </li>
-                                    <li class="mb-1">
-                                        <a target="_blank" href="https://www.vertex360.co">Vertex 360</a>
                                     </li>
                                     <li class="mb-1">
                                         <a href="#">Privacy Policy</a>
