--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -20,6 +20,14 @@
     <link href="{{{cdn}}}/wingman/css/socicon.css" rel="stylesheet" type="text/css" media="all" />
     <link href="{{{cdn}}}/wingman/css/entypo.css" rel="stylesheet" type="text/css" media="all" />
     <link href="{{{cdn}}}/wingman/css/theme.css" rel="stylesheet" type="text/css" media="all" />
+
+    <style>
+        @media(max-width:568px){
+            .hero {
+                text-align: center !important;
+            }
+        }
+    </style>
 </head>
 
 <body>
@@ -28,7 +36,7 @@
         <section class="bg-gradient overflow-hidden">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-12 col-md-6 mb-5 mb-md-0 position-relative">
+                    <div class="col-12 col-md-6 mb-5 mb-md-0 position-relative hero">
                         <h1 class="display-4">{{promo.hero.header}}</h1>
                         <p class="lead">{{promo.hero.subheader}}</p>
                         <a target="_blank" href="https://{{template.slug}}.vertex360.co" class="btn btn-lg btn-success">View Live Demo &rsaquo;</a>
