--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -585,7 +585,7 @@
                                 return
                             }
 
-                            actions.enable()
+                            // actions.enable()
                             actions.resolve()
                         },
                         createOrder: function(data, actions) {
