if user logged in, don't validate register fields

--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -565,8 +565,10 @@
                         },
                         onClick: function(data, actions){
                             // console.log('paypal button clicked!')
-                            if (button.type != 'register')
+                            if (button.type != 'register'){
+                                actions.resolve()
                                 return
+                            }
                             
                             // console.log('validate register fields.')
                             var visitor = {
