update footer with vertex content

--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -278,11 +278,12 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-4 mb-4">
-                        <img style="width:100px" alt="Turbo 360" src="https://lh3.googleusercontent.com/90S7s_3EMyHbmIs25cPSO5mVj9GnmLfzUPWzGhhQ61uceXESbkSsvXoPsM7kEaTlFpKCOlYkCz4Cppke_82gduCFpB8=s200" class="mb-2">
+                        <img style="width:140px" alt="Vertex 360" src="https://lh3.googleusercontent.com/pdS5a8pCwrYEp2dbvBPvBxq1WPO57VexjG0fkCNOSw6lIeUNuLK1PAyizKIWEvX6UgFBVQ9OHzbtkQMhvbS57ZRXww=s280" class="mb-2">
                         <p class="text-muted mt-1">
-                            Learn Node, React, Redux with Real
-                            <br />World Project Tutorials.
-                            <br>&copy; 2019 Turbo 360 Inc.
+                            Vertex 360 launches websites for influencers,
+                            <br />YouTubers, content creators, startups, podcasters 
+                            <br />or anyone who want to expand their online brand.
+                            <br>&copy; 2019 Vertex 360 Inc.
                         </p>
                     </div>
                     <div class="col-12 col-md-8">
