link logo to home

--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -278,7 +278,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-4 mb-4">
-                        <img style="width:140px" alt="Vertex 360" src="https://lh3.googleusercontent.com/pdS5a8pCwrYEp2dbvBPvBxq1WPO57VexjG0fkCNOSw6lIeUNuLK1PAyizKIWEvX6UgFBVQ9OHzbtkQMhvbS57ZRXww=s280" class="mb-2">
+                        <a href="/">
+                            <img style="width:140px" alt="Vertex 360" src="https://lh3.googleusercontent.com/pdS5a8pCwrYEp2dbvBPvBxq1WPO57VexjG0fkCNOSw6lIeUNuLK1PAyizKIWEvX6UgFBVQ9OHzbtkQMhvbS57ZRXww=s280" class="mb-2">
+                        </a>
                         <p class="text-muted mt-1">
                             Vertex 360 launches websites for influencers,
                             <br />YouTubers, content creators, startups, podcasters 
