--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -290,7 +290,7 @@
                     </div>
                     <div class="col-12 col-md-8">
                         <div class="row no-gutters">
-                            <div class="col-6 col-lg-3">
+                            <div class="col-6 col-lg-3 offset-lg-2">
                                 <h6>Menu</h6>
                                 <ul class="list-unstyled">
                                     <li class="mb-1">
