link to preview page

--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -78,7 +78,7 @@
                 <!--end of row-->
                 <ul class="row feature-list feature-list-sm">
                     <li class="col-12 col-md-4">
-                        <a href="#" class="card mt-4">
+                        <a target="_blank" href="{{{promo.features.preview_1.link}}}" class="card mt-4">
                             <img alt="Vertex 360" src="{{{promo.features.preview_1.img_screenshot}}}=s1024-c" class="img-fluid rounded" />
                         </a>
                         <h5>{{promo.features.preview_1.header}}</h5>
@@ -87,7 +87,7 @@
                     </li>
 
                     <li class="col-12 col-md-4">
-                        <a href="#" class="card mt-4">
+                        <a target="_blank" href="{{{promo.features.preview_2.link}}}" class="card mt-4">
                             <img alt="Vertex 360" src="{{{promo.features.preview_2.img_screenshot}}}=s1024-c" class="img-fluid rounded" />
                         </a>
                         <h5>{{promo.features.preview_2.header}}</h5>
@@ -96,7 +96,7 @@
                     </li>
 
                     <li class="col-12 col-md-4">
-                        <a href="#" class="card mt-4">
+                        <a target="_blank" href="{{{promo.features.preview_3.link}}}" class="card mt-4">
                             <img alt="Vertex 360" src="{{{promo.features.preview_3.img_screenshot}}}=s1024-c" class="img-fluid rounded" />
                         </a>
                         <h5>{{promo.features.preview_3.header}}</h5>
