--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -189,7 +189,17 @@
             <!--end of container-->
         </section>
         <!--end of section-->
-        
+
+        <section class="text-white space-md">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-12 col-lg-10">
+                        <img alt="Image" src="https://storage.turbo360.co/palette-rk9dc9/demo.gif" />
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section>
             <div class="container">
                 <div class="row justify-content-center text-center section-intro">
