--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -193,7 +193,7 @@
         <section class="text-white space-md">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-12 col-lg-10">
+                    <div class="col-12 col-lg-10 text-center">
                         <img alt="Image" src="https://storage.turbo360.co/palette-rk9dc9/demo.gif" />
                     </div>
                 </div>
