--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -194,7 +194,7 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-12 col-lg-10 text-center">
-                        <img alt="Image" src="https://storage.turbo360.co/palette-rk9dc9/demo.gif" />
+                        <img style="max-width:100%" alt="Vertex 360" src="https://storage.turbo360.co/palette-rk9dc9/demo.gif" />
                     </div>
                 </div>
             </div>
