--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -194,6 +194,13 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-12 col-lg-10 text-center">
+                        <h2 class="display-4 font-oswald">Update in Seconds</h2>
+                        <p class="lead">
+                            If you can point and click, you can update your professional website. We understand you have more important
+                            stuff to do than tinker with margins, font-sizes, background colors, and whatever - you have a business to run.
+                            Our sites get out of your way and let you get back to what matters - growing your business.
+                        </p>
+
                         <img style="max-width:100%" alt="Vertex 360" src="https://storage.turbo360.co/palette-rk9dc9/demo.gif" />
                     </div>
                 </div>
