dark text color

--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -190,12 +190,12 @@
         </section>
         <!--end of section-->
 
-        <section class="text-white space-md">
+        <section class="space-md">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-12 col-lg-10 text-center">
                         <h2 class="display-4 font-oswald">Update in Seconds</h2>
-                        <p class="lead">
+                        <p class="lead mb-4">
                             If you can point and click, you can update your professional website. We understand you have more important
                             stuff to do than tinker with margins, font-sizes, background colors, and whatever - you have a business to run.
                             Our sites get out of your way and let you get back to what matters - growing your business.
