--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -196,8 +196,8 @@
                     <div class="col-12 col-lg-10 text-center">
                         <h2 class="display-4 font-oswald">Update in Seconds</h2>
                         <p class="lead mb-4">
-                            If you can point and click, you can update your professional website. We understand you have more important
-                            stuff to do than tinker with margins, font-sizes, background colors, and whatever - you have a business to run.
+                            If you can point and click, you can update your professional site. We understand you have more important
+                            stuff to do than tinker with margins, font-sizes, background colors, and whatever for hours. You have a business to run.
                             Our sites get out of your way and let you get back to what matters - growing your business.
                         </p>
 
