--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -172,19 +172,15 @@
                             <img alt="Image" src="/wingman/img/avatar-male-3.jpg" class="avatar avatar-lg" />
                             <div class="media-body">
                                 <p class="h2">
-                                    “With Wingman, we were able to turn out a stunning landing page and compelling MVP for our SaaS App in no time.”
+                                    “Within the first few days after launching Palette, visitors stayed on the site longer, I received more contact inquiries, and gaining new clients got much easier.”
                                 </p>
-                                <span>Samuel Canning, Movend</span>
+                                <span>Sam Mayfield, Graphic Designer - San Francisco</span>
                             </div>
                         </div>
                     </div>
-                    <!--end of col-->
                 </div>
-                <!--end of row-->
             </div>
-            <!--end of container-->
         </section>
-        <!--end of section-->
 
         <section class="space-md">
             <div class="container">
