--- a/medium/template-2.mustache
+++ b/medium/template-2.mustache
@@ -172,7 +172,7 @@
                             <img alt="Image" src="/wingman/img/avatar-male-3.jpg" class="avatar avatar-lg" />
                             <div class="media-body">
                                 <p class="h2">
-                                    “Within the first few days after launching Palette, visitors stayed on the site longer, I received more contact inquiries, and gaining new clients got much easier.”
+                                    “Within the first few days after launching Palette, I received more contact inquiries and gaining new clients got much easier.”
                                 </p>
                                 <span>Sam Mayfield, Graphic Designer - San Francisco</span>
                             </div>
